--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "constructionestimation-backend",
+  "name": "constructionestimationbackend",
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "node App.js"
   },
   "author": "",
   "license": "ISC",
