--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
-    "dev": "node App.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "express-session": "^1.18.2",
     "lodash": "^4.17.21",
     "mongoose-findorcreate": "^4.0.0",
