--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "lodash": "^4.17.21",
+    "mongoose": "^8.16.5",
     "mongoose-findorcreate": "^4.0.0",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
